--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^2.2.1",
+    "@kinde-oss/kinde-auth-nextjs": "^2.6.1",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@tabler/icons-react": "^3.31.0",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +20,7 @@
     "framer-motion": "^12.6.0",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
